# bus-monitor

./: Cargo.toml  gdbinit  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.cargo/: config.toml
.devcontainer/: devcontainer.json
assets/: marga.tga  marga2.tga  patri.tga  patri2.tga  test.tga
docs/: README.md
icons/: Batt0.raw  Batt1.raw  Batt2.raw  Batt3.raw  Batt4.raw  Bus.raw  Bus2.raw  School.raw  Work.raw  icons.raw
scripts/: flash.sh  run-wokwi.sh
src/: display.rs  emtmadrid.rs  main.rs  peripherals.rs  wifi.rs
src/peripherals/: display.rs
