[package]
name = "bus-monitor"
version = "0.1.0"
authors = ["Miguel Angel Ajo Pelayo <miguelangel@ajo.es>"]
edition = "2018"
#edition = "2018"
#resolver = "2"

[profile.release]
#opt-level = "s"
opt-level = "z"
lto = true
codegen-units = 1

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["experimental"]
pio = ["esp-idf-sys/pio"]
experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]
ttgo = []
eink = []
serialonly = []

[dependencies]
esp-idf-sys = { version = "0.31", features = ["binstart"] }
esp-idf-svc = "0.42.1"
esp-idf-hal = "0.38"
embedded-svc = "0.22.3"
embedded-hal = "0.2"
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
tinytga = { git = "https://github.com/embedded-graphics/tinytga", branch="master" }

# Display interface and libraries
embedded-graphics = "0.7.1"
display-interface = "0.4"
display-interface-spi = "0.4"
st7789 = "0.6"
# ili9341 = { version = "0.5", git = "https://github.com/yuri91/ili9341-rs", rev = "32ca780" }
shared-bus = "0.2.4"
epd-waveshare = { version = "0.5", path = "../epd-waveshare"}

serde_json = "1.0.80"

[patch.crates-io]
embedded-io = { git = "https://github.com/ivmarkov/embedded-io" }

[build-dependencies]
embuild = "0.30"
anyhow = "1"

[package.metadata.espflash]
partition_table = "partitions.csv"
